# shuttle_cch23

./: .gitignore  Cargo.toml  README.md  validate_cch23.sh
src/: main.rs  task_negative_one.rs  task_one.rs
src/tasks/: eight.rs  eighteen.rs  eleven.rs  fifteen.rs  five.rs  four.rs  fourteen.rs  mod.rs  negative_one.rs  nineteen.rs  one.rs  seven.rs  six.rs  thirteen.rs  twelve.rs  twenty.rs  twenty_one.rs  twenty_two.rs
