[package]
name = "barsik-cch23"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.6.1"
futures = "0.3"
image = "0.24.7"
actix-web = { version = "4.3.1", features = ["cookies"] }
shuttle-actix-web = "0.35.0"
shuttle-runtime = "0.35.0"
tokio = "1.26.0"
serde = "1.0.193"
serde_json = { version = "1.0.108", features = [] }
base64 = "0.21.5"
rustemon = "3.2.1"
lazy_static = "1.4.0"
uuid = { version = "1.6.1", features = ["v4"] }
ulid = "1.1.0"
