[package]
name = "barsik-cch23"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.6.1"
futures = "0.3"
image = "0.24.7"
actix = "0.13.1"
actix-web = { version = "4.3.1", features = ["cookies"] }
actix-web-actors = "4.2.0"
shuttle-actix-web = "0.35.0"
shuttle-runtime = "0.35.0"
shuttle-shared-db = { version = "0.35.1", features = ["postgres"] }
sqlx = "0.7.3"
tokio = "1.26.0"
toml = "0.8.1"
serde = "1.0.193"
serde_json = { version = "1.0.108", features = [] }
serial_test = "2.0.0"
base64 = "0.21.5"
rustemon = "3.2.1"
lazy_static = "1.4.0"
uuid = { version = "1.6.1", features = ["v4"] }
ulid = "1.1.0"
chrono = "0.4.31"
askama = "0.12.1"
regex = "1.10.2"
sha2 = "0.10.8"
tar = { version = "0.4.40", features = [] }
